# custom-rust-dist

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs  reference  setup.bash  sync_toolchain.sh
.cargo/: config  config.toml
.github/workflows/: gui-tests.yml  publish-doc.yml  release.yml  standard-tests-linux.yml  standard-tests-windows.yml  standard-tests.yml  standard_tests.yml  tauri.yml
ci/: run.sh
ci/docker/dist-aarch64-linux/: Dockerfile
ci/docker/dist-aarch64-linux-gnu/: Dockerfile
ci/docker/dist-aarch64-linux-musl/: Dockerfile
ci/docker/dist-x86-64-linux/: Dockerfile
ci/docker/dist-x86-64-linux-gnu/: Dockerfile
ci/docker/dist-x86-64-linux-musl/: Dockerfile
ci/scripts/: install-nodejs.sh  install-rust.sh  install-tauri-cli.sh  run-with-docker.sh  run-without-docker.sh
installer/: .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
installer/src/: App.vue  app.rs  cli.rs  components.html  configuration.rs  defaults.rs  explain.html  finish.html  index.html  lib.rs  main.rs  main.ts  mini_rustup.rs  parser.rs  progress.html  steps.rs  utils.rs
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/src/: cli.rs  common.rs  components.rs  config.rs  error.rs  installer_mode.rs  lib.rs  main.rs  manager_mode.rs  toolkit.rs
installer/src/app/: main_frame.rs  side_panel.rs  themes.rs
installer/src/cli/: common.rs  config.rs  extra.rs  init.rs  install.rs
installer/src/components/: BaseButton.vue  BaseCheckBox.vue  BaseDialog.vue  BaseInput.vue  BaseProgress.vue  BaseRadio.vue  BaseTag.vue  CheckBoxGroup.vue  KitCard.vue  Pagination.vue  TheAside.vue  TheInstallerLayout.vue  TheLayout.vue  TheManagerLayout.vue  Titlebar.vue
installer/src/components/icons/: MdiClose.vue  MdiMenuRight.vue  MdiMinus.vue
installer/src/css/: components.css  explain.css  finish.css  index.css  progress.css
installer/src/mini_rustup/: cli_common.rs  dist.rs  utils.rs
installer/src/parser/: configuration.rs  crates.rs
installer/src/router/: index.ts
installer/src/scripts/: components.js  explain.js  finish.js  index.js  progress.js
installer/src/theme/: index.ts
installer/src/utils/: download.rs  etc.rs  filesystem.rs  index.ts  installConf.ts  invokeCommand.ts  managerConf.ts  process.rs  progress.ts
installer/src/utils/types/: CheckBoxGroup.ts  Component.ts  KitItem.ts
installer/src/view/: ComponentsView.vue  ConfirmView.vue  ExplainView.vue  FinishView.vue  FolderView.vue  HomeView.vue  InstallView.vue
installer/src/views/installer/: ComponentsView.vue  ConfirmView.vue  FinishView.vue  FolderView.vue  HomeView.vue  InstallView.vue
installer/src/views/installer/components/: TheAside.vue
installer/src/views/manager/: ChangeView.vue  CompleteView.vue  ComponentsView.vue  ConfirmView.vue  ManagerView.vue  ProgressView.vue  UninstallView.vue
installer/src/views/manager/components/: KitCard.vue  Label.vue  TheManagerLayout.vue
installer/tests/: wrapper.rs
installer/tests/common/: mod.rs  setup.rs  utils.rs
installer/tests/data/: all_settings.toml  configuration.toml  configuration_template.toml  installation.toml  settings_with_no_previous_env.toml
installer/tests/suite/: cli_config.rs  cli_init.rs  mod.rs
locales/: en.json  zh-CN.json
logger/: Cargo.toml
logger/src/: color.rs  lib.rs
packager/: Cargo.toml
patches/rustup/: add-extra-tools-proxy.patch
resources/: dist_manifest_mocked.toml  gen_pkg_list.sh  packages.txt  toolset_manifest.toml  toolset_manifest_noweb.toml
resources/example/src/: main.rs
rim_dev/: Cargo.toml  README.md  build.rs
rim_dev/src/: common.rs  dist.rs  main.rs  mocked_manager.rs  vendor.rs
rim_dev/src/mocked/: installation.rs  manager.rs  mod.rs  server.rs
rim_gui/: README.md  vite.config.ts
rim_gui/src/: App.vue
rim_gui/src-tauri/: Cargo.toml  tauri.conf.json
rim_gui/src-tauri/icons/: icon.icns
rim_gui/src-tauri/src/: common.rs  error.rs  installer_mode.rs  main.rs  manager_mode.rs
rim_gui/src/components/: BaseCheckBox.vue  BaseDialog.vue  BaseProgress.vue  BaseRadio.vue  CheckBoxGroup.vue  ScrollBox.vue  Titlebar.vue
rim_gui/src/router/: index.ts
rim_gui/src/theme/: index.ts
rim_gui/src/utils/: index.ts  invokeCommand.ts  managerConf.ts  pagination.ts
rim_gui/src/utils/types/: KitItem.ts
rim_gui/src/views/installer/: ComponentsView.vue  ConfirmView.vue  FolderView.vue  HomeView.vue
rim_gui/src/views/manager/: ConfirmView.vue  ManagerView.vue  ProgressView.vue  UninstallView.vue
rim_test/rim-test-macro/: Cargo.toml
rim_test/rim-test-macro/src/: lib.rs
rim_test/rim-test-support/: Cargo.toml
rim_test/rim-test-support/src/: lib.rs  paths.rs  project.rs  worker.rs
scripts/: package.sh
scripts/package/: cargo-audit.bash  cargo-fuzz.bash  flamegraph.bash  rust-code-analysis.bash  rustup.bash
src/: lib.rs  rustup.rs  triple.rs
src/cli/: common.rs  component.rs  install.rs  list.rs  mod.rs  tryit.rs  uninstall.rs  update.rs
src/core/: cargo_config.rs  components.rs  directories.rs  install.rs  locales.rs  manifest.rs  mod.rs  offline_packages.rs  path_ext.rs  rustup.rs  toolkit.rs  tools.rs  try_it.rs  uninstall.rs  update.rs
src/core/custom_instructions/: buildtools.rs  mod.rs  vscode.rs
src/core/install_instructions/: buildtools.rs  mod.rs
src/core/os/: mod.rs  unix.rs  windows.rs
src/core/parser/: cargo_config.rs  dist_manifest.rs  fingerprint.rs  manifest.rs  mod.rs  release_info.rs  toolset_manifest.rs
src/utils/: detect.rs  download.rs  extraction.rs  file_system.rs  log.rs  mod.rs  obsutils.rs  process.rs  progress_bar.rs  triple.rs
tests/: extraction.rs  manager_mode.rs  other_utils.rs
tests/assets/: 7z_with_sub_folders.7z  simple_7z.7z  toolset_manifest.toml  xz_with_prefixes.tar.xz  xz_with_sub_folders.tar.xz
tests/data/: 7z_with_prefixes.7z  simple_xz.tar.xz  toolset_manifest.toml
tests/testsuite/: env.rs  file_extract.rs  file_walker.rs  main.rs
tests/testsuite/rim_cli/: mod.rs
tests/testsuite/rim_dev/: mod.rs
(+9 files in other folders)
