[package]
name = "custom_rust_dist"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Manage Rust toolchain and a set of extra tools with ease"
rust-version = "1.73.0" # Minimal required version to use `zip`

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
home = "0.5.9"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
libc = "0.2"
toml = "0.8.15"
tempfile = "3"
zip = "2"
dirs = "5.0.1"
sevenz-rust = "0.6.1"

[target."cfg(windows)".dependencies]
winreg = "0.52.0"
winapi = { version = "0.3", features = ["winuser"] }

[target."cfg(windows)".dependencies.windows-sys]
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_JobObjects",
  "Win32_System_Kernel",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
version = "0.52.0"
