[package]
name = "rim"
version = "0.1.0-alpha.4"
edition = "2021"
description = "An interactive Rust installation manager"
rust-version = "1.73.0" # Minimal required version to use `zip`

[features]
gui = []

[[bin]]
name = "rim-cli"
path = "src/bin/installer.rs"

[workspace]
members = ["installer/src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
url = { version = "2", features = ["serde"] }
toml = "0.8.15"
tempfile = "3"
indexmap = { version = "2", features = ["serde"] }
rust-i18n = "3"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
home = "0.5.9"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
serde.workspace = true
url.workspace = true
libc = "0.2"
toml.workspace = true
tempfile.workspace = true
zip = "2"
dirs = "5.0.1"
sevenz-rust = "0.6.1"
tar = "0.4"
xz2 = "0.1.7"
flate2 = "1"
common-path = "1.0.0"
cfg-if = "1"
env_proxy = "0.4.1"
indexmap.workspace = true
rust-i18n.workspace = true

[target."cfg(windows)".dependencies]
winreg = "0.52.0"
winapi = { version = "0.3", features = ["winuser", "winbase"] }
cc = "1"

[target."cfg(windows)".dependencies.windows-sys]
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_JobObjects",
  "Win32_System_Kernel",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
version = "0.52.0"

[[test]]
name = "manager_mode"
harness = false
