[package]
name = "rim"
version = "0.3.1"
edition = "2021"
description = "An interactive Rust installation manager"
rust-version = "1.73.0" # Minimal required version to use `zip`

[features]
default = []
no-web = []
gui = []

[[bin]]
name = "rim-cli"
path = "src/bin/rim_cli.rs"

[workspace]
members = ["rim_gui/src-tauri", "rim_dev"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
url = { version = "2", features = ["serde"] }
toml = "0.8.15"
tempfile = "3"
indexmap = { version = "2.5", features = ["serde"] }
rust-i18n = "3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "native-tls-vendored"] }
serde.workspace = true
url.workspace = true
toml.workspace = true
tempfile.workspace = true
zip = "2"
dirs = "5.0.1"
sevenz-rust = "0.6.1"
tar = "0.4"
xz2 = "0.1.7"
flate2 = "1"
common-path = "1.0.0"
cfg-if = "1"
env_proxy = "0.4.1"
indexmap.workspace = true
rust-i18n.workspace = true
sys-locale = "0.3.1"
semver = "1.0.23"
self-replace = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tracing-appender = "0.2.3"

[target."cfg(windows)".dependencies]
winreg = "0.52.0"
winapi = { version = "0.3", features = ["winuser", "winbase"] }
cc = "1"
