[package]
name = "installer"
version = "0.0.1-alpha.1"
edition = "2021"
description = "Manage rust and cargo installation with ease"
rust-version = "1.70" # Minimum of 1.70 needed because of OnceLock

[dependencies]
anyhow = "1"
cfg-if = "1"
clap = { version = "4", features = ["derive"], optional = true }
iced = { version = "0.9.0", features = ["image"], optional = true }
serde = { version = "1.0.175", features = ["derive"] }
toml_edit = { version = "0.19", features = ["serde"] }
home = "0.5.4"
url = { version = "2.4.0", features = ["serde"] }
logger = { path = "../logger" }
log = { version = "0.4", features = ["std"] }

[features]
default = ["cli"]
debug = []
cli = ["dep:clap"]
iced-gui = ["dep:iced"]
