[package]
name = "rupe"
version = "0.0.1-alpha.1"
edition = "2021"
description = "Manage rust and cargo installation with ease"
rust-version = "1.70" # Minimum of 1.70 needed because of OnceLock

[dependencies]
anyhow.workspace = true
cfg-if = "1"
clap = { version = "4", features = ["derive"], optional = true }
home = "0.5.4"
iced = { version = "0.9.0", features = ["image"], optional = true }
indicatif = { version = "0.17", optional = true }
# to make sure `indicatif` and `log` don't interfering each other
indicatif-log-bridge = { version = "0.2", optional = true }
log = { version = "0.4", features = ["std"] }
logger = { path = "../logger" }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.175", features = ["derive"] }
tempfile.workspace = true
toml_edit = { version = "0.19", features = ["serde"] }
url.workspace = true

[build-dependencies]
lazy_static.workspace = true
regex = "1.9.3"

[features]
default = ["cli"]
debug = []
cli = ["dep:clap", "dep:indicatif", "dep:indicatif-log-bridge"]
iced-gui = ["dep:iced"]

[target."cfg(not(windows))".dependencies]
libc = "0.2.147"

[target."cfg(windows)".dependencies]
cc = "1"
winreg = "0.11"

[target."cfg(windows)".dependencies.winapi]
features = [
    "combaseapi",
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "ioapiset",
    "jobapi",
    "jobapi2",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "shlobj",
    "shtypes",
    "synchapi",
    "sysinfoapi",
    "tlhelp32",
    "userenv",
    "winbase",
    "winerror",
    "winioctl",
    "winnt",
    "winuser",
]
version = "0.3"
