[package]
name = "xuanwu-installer"
version = "0.0.0"
description = "Front-end user interface for XuanWu Rust installer"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde.workspace = true
serde_json = "1"
###
anyhow.workspace = true
url.workspace = true
toml.workspace = true
tempfile.workspace = true
gag = "1"
custom_rust = { path = "../..", features = [ "gui" ] }
indexmap.workspace = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
