[package]
name = "rim-gui"
version = "0.2.0"
description = "An interactive Rust installation manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde.workspace = true
serde_json = "1"
###
anyhow.workspace = true
url.workspace = true
toml.workspace = true
tempfile.workspace = true
gag = "1"
rim = { path = "../..", features = [ "gui" ] }
indexmap.workspace = true
rust-i18n.workspace = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
no-web = ["rim/no-web"]
