[package]
name = "rim-gui"
version = "0.3.1"
description = "An interactive Rust installation manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "dialog-all", "shell-open"] }
window-shadows = "0.2.2"
serde.workspace = true
serde_json = "1"
###
anyhow.workspace = true
url.workspace = true
toml.workspace = true
tempfile.workspace = true
rim = { path = "../..", features = [ "gui" ] }
indexmap.workspace = true
rust-i18n.workspace = true
log.workspace = true
fern.workspace = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
no-web = ["rim/no-web"]
